Improve ClassNewInstance suggested fix
Prefer `getDeclaredConstructor().newInstance()` to
`getConstructor().newInstance()`.

See: https://bugs.openjdk.java.net/browse/JDK-8168681

MOE_MIGRATED_REVID=148055638